// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepoTools component when user has no repos renders without search 1`] = `
<div
  className="repo-tools"
>
  <RepoToolsAdd />
  <RepoToolsRefresh
    isSyncing={false}
    onRefreshClicked={[Function]}
  />
</div>
`;

exports[`RepoTools component when user has repos renders with search 1`] = `
<div
  className="repo-tools"
>
  <RepoToolsAdd />
  <RepoToolsRefresh
    isSyncing={false}
    onRefreshClicked={[Function]}
  />
  <RepoToolsSearch
    onSearchInput={[Function]}
  />
</div>
`;
